fixed button spacing issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -49,6 +49,7 @@ input.search-bar {
     color: aliceblue;
     padding: 5px 15px;
     margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
